# brainkids

./: .gitignore  Makefile  README.md  main.py  operations.py  order.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/: copilot-instructions.md
brain_kids/src/: __init__.py  main.py
brain_kids/src/core/: __init__.py  common_ui_callback.py  datamanager.py  gamelogic.py  gamestate.py  imagemanager.py  scoreboard.py
brain_kids/src/gui/: __init__.py  layout.py  renderer.py
brain_kids/src/quizzes/: __init__.py  animals.py  eating.py  egyptians.py  lakeriversea.py  livingornot.py  rocks.py  solarsystem.py  treeparts.py
brain_kids/tests/: common_ui_callback_test.py  datamanager_test.py  gamelogic_test.py  lakeriversea_test.py  livingornot_test.py  scoreboard_test.py  treeparts_test.py
brain_kids/tests/test_data/: images.json  test_chart.json
brainkids/src/: main.py
brainkids/src/core/: gamelogic.py
brainkids/src/gui/: renderer.py
brainkids/src/quizzes/: lakeriversea.py  livingornot.py  treeparts.py
brainkids/tests/: gamelogic_test.py  imagemanager_test.py  livingornot_test.py  scoreboard_test.py
livingornot/: main.py  renderer.py
livingornot/data/image_list/: images.json
livingornot/src/: randomimageselection.py  state.py
school_suite/: operations.py  order.py  precedente_successivo.py
schooltestsuite/: main.py
schooltestsuite/livingornot/: livingornot.py
schooltestsuite/tests/: chart_test.py  common_ui_callback_test.py  gamelogic_test.py  livingornot_test.py
schooltestsuite/treeparts/: treeparts.py
(+44 files in other folders)
