[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainkids"
version = "1.0.0"
description = "Visual tests for primary school deaf children"
authors = [{ name = "Tommaso Seremia", email = "t.seremial@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "pillow"
]

[tool.setuptools]
packages = ["core", "gui", "quizzes"]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
brainkids = ["data/*.json", "images/*.png"]

[project.scripts]
brainkids = "src.main:main"